# carapis-parser

./: .gitignore  README.md  __init__.py  cli.py  cli_db.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tutorial.py
@docs/: ADAPTER.md  DATABASE.md  DATABASE_CLI.md  DIAGRAMS.md  HTTP_CLIENT.md  MODULES.md  NOTES.md  OVERVIEW.md  QUICKSTART.md  README.md  TESTING.md
data/: .gitignore
module/: __init__.py  adapter.py  config.py
module/core/: __init__.py  parser.py
module/database/: database.py  models.py
module/tests/: README.md  __init__.py  test_adapter.py  test_database.py  test_fake_db.py  test_fake_db_pytest.py  test_fake_db_simple.py  test_simple.py
module/utils/: logger.py
parser_demo/: __init__.py  adapter.py  cli.py  cli_db.py  config.py
parser_demo/database/: __init__.py  database.py
samples/: README.md
tests/: FINAL_REPORT.md  README.md  test_adapter.py  test_adapter_simple.py  test_cli.py  test_config.py  test_coverage.py  test_database.py  test_database_isolated.py  test_database_simple.py  test_demo_parser.py  test_detail_extraction.py  test_extractors.py  test_fake_db.py  test_fake_db_pytest.py  test_fake_db_simple.py  test_fake_db_simple_pytest.py  test_listing_extraction.py  test_main_parser.py  test_parsing.py  test_simple.py  test_unrealparser_integration.py  test_utils.py  toggle_testing_mode.py
tests_old/: test_config_simple.py  test_config_standalone.py  test_fake_db_simple_pytest.py  test_listing_extraction.py  test_unrealparser_integration.py  test_unrealparser_integration_standalone.py  test_utils.py  test_utils_standalone.py
(+32 files in other folders)
