[tool.poetry]
name = "parser_demo"
version = "0.1.0"
description = "Demo parser"
authors = ["Unrealos <info@unrealos.com>"]
readme = "README.md"
packages = [{include = "module"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.0"
requests = "^2.28.0"
questionary = "^2.1.0"
faker = "^37.4.2"
peewee = "^3.18.2"
rich = "^14.1.0"
pydantic = "^2.11.7"
asgiref = "^3.9.1"
tenacity = "^9.1.2"
django = "^5.2.4"
pydantic-settings = "^2.10.1"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
httpx = "^0.28.1"
pyyaml = "^6.0.2"
aiofiles = "^24.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
