[tool.poetry]
name = "parser_demo"
version = "0.1.0"
description = "Demo parser with HTTP client integration"
authors = ["Mark <markolofsen@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "parser_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0.0"
rich = ">=13.0.0,<15.0.0"
tenacity = ">=8.0.0,<10.0.0"
aiofiles = ">=23.0.0,<25.0.0"
httpx = ">=0.23.0,<0.24.0"
PyYAML = "^6.0"
python-dotenv = "^1.1.1"
questionary = "^2.0.0"
peewee = "^3.18.2"
faker = "^20.0.0"
beautifulsoup4 = "^4.12.0"

# Unrealparser
unrealparser = {path = "../unrealparser", develop = true}
asgiref = "^3.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
